# board

./: .gitignore  Dockerfile  README.md
backend/: Cargo.toml
backend/migrations/2020-11-11-071724_create_posts/: up.sql
backend/src/: db_operations.rs  lib.rs  main.rs  models.rs  schema.rs
backend/templates/: index.html
frontend/: package-lock.json  package.json
frontend/src/: .prettierrc  App.tsx  Board.scss  NavBar.scss  index.tsx
frontend/src/components/: Board.tsx  BoardContents.tsx  NavBar.tsx
frontend/src/scss/: Board.scss  NavBar.scss  index.scss
