[package]
name = "board"
version = "0.1.0"
authors = ["senk <senk842@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.1"
actix-web = "3.2.0"
askama = "0.10.3"
thiserror = "1.0.22"
r2d2 = "0.8.9"
r2d2_sqlite = "0.17.0"
rusqlite = { version = "0.24.0", features=["bundled"]}
serde = {version="1.0", features = ["derive"]}
anyhow = "1.0.34"

