[package]
name = "board"
version = "0.1.0"
authors = ["senk <senk842@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.1"
actix-web = "3.2.0"
askama = "0.10.3"
thiserror = "1.0.22"
diesel = { version = "1.4.4", features = ["sqlite"] }
dotenv = "0.15.0"

